[package]
name = "gbsdiff"
description = "A tool for highlighting the differences in the execution of two GBS files."
authors = ["Eldred Habert <me@eldred.fr>"]
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/ISSOtm/gbsdiff"
keywords = ["game-boy", "music", "music", "chiptune"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::testing", "emulators", "game-development"]

[dependencies]
argh = "0.1.9"
gb-cpu-sim = "1.1.0"
owo-colors = { version = "3.5.0", features = [ "supports-colors" ] }
parse-display = { version = "0.6.0", default-features = false }
slicedisplay = "0.2.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
